# TE3003B

./: .gitignore  README.md  codigo1.py  commands.txt  planner.py  warehouse_map.pgm
control/: .clang-format  CMakeLists.txt  package.xml
control/config/: control.yaml
control/include/control/: controller.h  cubic_spline.h
control/src/: controller.cpp  cubic_spline.cpp
filter_tuning/: setup.cfg  setup.py
filter_tuning/filter_tuning/: filter_tuning.py
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/sensor_fusion/share/sensor_fusion/: package.bash  package.dsv  package.ps1  package.sh
log/: latest_build
occupancy_grid_mapper/: package.xml  setup.py
occupancy_grid_mapper/occupancy_grid_mapper/: occupancy_grid_mapper.py
odometry/: CMakeLists.txt  package.xml
odometry/config/: odometry.yaml
odometry/include/odometry/: odometry.h
odometry/src/: odometry.cpp
sensor_fusion/: CMakeLists.txt  package.xml
sensor_fusion/config/: sensor_fusion.yaml
sensor_fusion/include/sensor_fusion/: extended_kalman_filter.h  observation.h  sensor_fusion.h
sensor_fusion/launch/: sensor_fusion_launch.py
sensor_fusion/src/: extended_kalman_filter.cpp  observation.cpp  sensor_fusion.cpp  sensor_fusion_main.cpp
sensor_fusion/test/: extended_kalman_filter_test.cpp
simulation_workspace/: simulation_start.sh
simulation_workspace/install/: local_setup.sh  setup.bash  setup.sh
simulation_workspace/log/: latest_build
simulation_workspace/src/s7_py_robot_task_monitoring/: package.xml  setup.py
simulation_workspace/src/s7_py_robot_task_monitoring/rviz/: robot_network.rviz
simulation_workspace/src/s7_py_robot_task_monitoring/s7_py_robot_task_monitoring/: cylinders.py  robot_status_logger.py  robots.py
simulation_workspace/src/s7_py_task_manager/: package.xml  setup.cfg  setup.py
simulation_workspace/src/s8_py_slam/: package.xml  setup.py
simulation_workspace/src/s8_py_slam/config/: robot_controllers.yaml
workspace/: frames.gv  robot_start.sh  start_ros2_processes.sh.sh  stop_ros2_processes.sh
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/log/: latest_build
workspace/my_package/: package.xml
workspace/my_package/my_package/: planner_node.py
workspace/src/control/: CMakeLists.txt  package.xml
workspace/src/control/include/control/: controller.h  cubic_spline.h
workspace/src/control/launch/: control_launch.py
workspace/src/control/src/: controller.cpp  cubic_spline.cpp
workspace/src/filter_tuning/: package.xml
workspace/src/my_package/: setup.py
workspace/src/occupancy_grid_mapper/: package.xml  setup.py
workspace/src/planner/: package.xml  setup.py
workspace/src/py_package/: package.xml  setup.cfg  setup.py
workspace/src/s7_py_client_robot/: package.xml
workspace/src/s7_py_robot_task_monitoring/: setup.cfg
workspace/src/s7_robot_network_interface/: CMakeLists.txt
workspace/src/s8_py_slam/: setup.cfg  setup.py
workspace/src/simulation/: package.xml  setup.py
workspace/src/slam/: package.xml
workspace/src/start/: setup.py
x3_workspace/src/filter_tuning/: setup.py
x3_workspace/src/occupancy_grid_mapper/: setup.cfg
x3_workspace/src/planner/: setup.py
x3_workspace/src/s7_py_client_robot/: setup.cfg  setup.py
x3_workspace/src/s7_robot_network_interface/: package.xml
x3_workspace/src/s7_robot_network_interface/msg/: RobotStatus.msg
x3_workspace/src/slam/: setup.py
x3_workspace/src/start/: package.xml  setup.cfg
(+124 files in other folders)
